--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
         "ejs": "^3.1.8",
         "express": "^4.18.1",
         "mongoose": "^6.6.5",
-        "serve-favicon": "^2.5.0"
+        "serialport": "^13.0.0",
+        "serve-favicon": "^2.5.0",
+        "socket.io": "^4.8.1"
     },
     "cordova": {
-      "platforms": [
-        "browser"
-      ]
+        "platforms": [
+            "browser"
+        ]
     }
-  }
+}
